--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -35,33 +35,33 @@
 
     <EditText
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:ems="10"
-        android:lines="1"
-        android:text="@string/title"
+        android:inputType="text"
+        android:maxLines="1"
+        android:hint="@string/title"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/savebutton"
+        app:layout_constraintStart_toEndOf="@+id/arrowbutton"
         app:layout_constraintTop_toBottomOf="@+id/arrowbutton" />
 
     <EditText
         android:id="@+id/note"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/note"
+        android:layout_marginHorizontal="16dp"
+        android:hint="@string/note"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="normal"
-        android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/title"
+         />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
